[package]
name = "learn_ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features=[ "full" ] }
ethers = { version = "1.0.0", features=["ws", "rustls"] }
eyre = "0.6.8"